Add a progress spinner to the index page when loading books

--- a/views/index.erb
+++ b/views/index.erb
@@ -79,7 +79,9 @@ $(document).ready(function () {
 				<div class="col-xs-0 col-sm-3"><!--spacer--></div>
 			</div>
 
-			<ul class="book-list"></ul>
+			<ul class="book-list">
+				<img class="spinner" src="/images/spinner.gif"/>
+			</ul>
 
 			<div class="row">
 				<div class="col-sm-10 col-xs-12"></div>
