Use the new book-list component on the books page.
That should be everywhere now!

--- a/public/stylesheets/sass/index.scss
+++ b/public/stylesheets/sass/index.scss
@@ -82,6 +82,10 @@ ul.book-list, ul.meeting-list {
 	}
 }
 
+ul.book-list {
+	margin-bottom: 60px;
+}
+
 .book-listing {
 	margin-bottom: 15px;
 	padding-top: 7px;
