--- a/views/meeting.erb
+++ b/views/meeting.erb
@@ -134,7 +134,7 @@
 			};
 		}
 
-		$(".book-list").book_list(
+		$(".book-list").bookList(
 			{
 				initialState: bbBookClub.initialState,
 				collectionName: "nominated_books",
