--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,7 @@
 
 <script>
 $(document).ready(function () { 
-	$(".book-list").book_list({getUrl: "/books/unread.json"});
+	$(".book-list").bookList({getUrl: "/books/unread.json"});
 });
 </script>
 
