--- a/views/books.erb
+++ b/views/books.erb
@@ -8,17 +8,20 @@
 
 <script type="text/javascript">
 	$(document).ready(function () {
-		$("#book-list-read").bookList({
-			getUrl: "/books/read.json"
+		$("#book-list-unread").bookList({
+			getUrl: "/books/unread.json",
+			sort: "desc"
 		});
 
-		$("#book-list-unread").bookList({
-			getUrl: "/books/unread.json"
+		$("#book-list-read").bookList({
+			getUrl: "/books/read.json",
+			sort: "asc"
 		});
 
 		<% if false %>
 		$("#book-list-rejected").bookList({
-			getUrl: "/books/rejected.json"
+			getUrl: "/books/rejected.json",
+			sort: "asc"
 		});
 		<% end %>
 	});
