--- a/public/stylesheets/sass/meeting.scss
+++ b/public/stylesheets/sass/meeting.scss
@@ -6,13 +6,9 @@
 	color: "#337ab7"
 }
 
-.book-reject-button, .book-select-button {
-	width: 100%;
-}
-
-.book-reject-button {
-	margin-bottom: 5px;
-}
+// .book-reject-button {
+// 	margin-bottom: 5px;
+// }
 
 .book-cover {
 	img {
