Add date.js everywhere that the book list component is used. This replaces Date.parse with an implementation that works the same on both Firefox and Chrome (and, one assumes, IE). This fixes book-sorting on Firefox and closes #40

--- a/views/books.erb
+++ b/views/books.erb
@@ -7,6 +7,7 @@
 <script src="/javascripts/jquery-css-transform.js"></script>
 <script src="/javascripts/jquery.quicksand.js"></script>
 <script src="/javascripts/bootbox.js"></script>
+<script src="/javascripts/date.js"></script>
 <script src="/javascripts/book_list_component.js"></script>
 <script src="/javascripts/reject_from_nominations.js"></script>
 
