Add a favicon and resolve #36
This also adds a colophon since the image needs to be attributed.

--- a/public/stylesheets/sass/index.scss
+++ b/public/stylesheets/sass/index.scss
@@ -18,6 +18,11 @@ body {
 	visibility: invisible;
 }
 
+img.site-logo {
+	max-width: 25px;
+	display: inline;
+}
+
 #page-spinner, .page-spinner {
 	max-height: 24px;
 	margin-bottom: 5px;
