--- a/views/layout.erb
+++ b/views/layout.erb
@@ -37,7 +37,9 @@
 	<meta name="msapplication-square310x310logo" content="/images/favicomatic/mstile-310x310.png" />
 	<% # end favicon %>
 
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/bluebird/2.9.25/bluebird.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src="/javascripts/common.js"></script>
 </head>
 <body>
 	<%= erb :page_menu %>
