--- a/views/layout.erb
+++ b/views/layout.erb
@@ -39,6 +39,7 @@
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/bluebird/2.9.25/bluebird.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/4.4.0/bootbox.min.js"></script>
 	<script src="/javascripts/common.js"></script>
 </head>
 <body>
